--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ async = ["futures-core", "futures-task", "futures-util"]
 send = []
 serialize = ["serde", "erased-serde"]
 macros = ["mlua_derive/macros"]
+alloc_panic = []
 
 [dependencies]
 mlua_derive = { version = "=0.6.0", optional = true, path = "mlua_derive" }
