Build errors, warnings
The wrong change was merged to fix a warning, this change
corrects that and also resolves an issue where serde derive
wasn't called out explicitely as a dependency.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ vendored = ["lua-src", "luajit-src"]
 module = ["mlua_derive"]
 async = ["futures-core", "futures-task", "futures-util"]
 send = []
-serialize = ["serde", "erased-serde"]
+serialize = ["serde", "serde/derive", "erased-serde"]
 macros = ["mlua_derive/macros"]
 alloc_panic = []
 
